--- a/design.html
+++ b/design.html
@@ -100,9 +100,9 @@
             </div>
             <div class="dsn">
              <h3>Go-to our other creative web pages:</h3><br>
-             <a href="/practice/hospitalwebsite.html">Hospital Website</a><br>
-             <a href="/practice/design.html">Design List</a><br>
-             <a href="/practice/loginform.html"> Log-in Form</a><br>
+             <a href="hospitalwebsite.html">Hospital Website</a><br>
+             <a href="design.html">Design List</a><br>
+             <a href="loginform.html"> Log-in Form</a><br>
 
             </div>
             </div>
